--- a/ACD_FEB2_Session_1_Assignment_1_Main.html
+++ b/ACD_FEB2_Session_1_Assignment_1_Main.html
@@ -9,6 +9,7 @@
 	<p>Second <i>Paragraph</i></p>
 	<p>Third <b>Paragraph</b></p>
 	<h2>Second Heading</h2>
+	<img src="C:\Users\Dipam\Documents\GitHub\ACD_FEB2_Session_1_Assignment_1_Main\Untitled.png">
 	<p>Second <i>Paragraph</i></p>
 	<p>Third <b>Paragraph</b></p>
 </body>
